--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.samples</groupId>
     <artifactId>spring-petclinic</artifactId>
-    <version>4.2.6-SNAPSHOT</version>
+    <version>4.0.0</version>
 
     <name>petclinic</name>
     <packaging>war</packaging>
@@ -219,13 +219,9 @@
     </dependencies>
 
 	<distributionManagement>
-	   <snapshotRepository>
-	      <id>snapshots</id>
-	      <url>http://13.76.243.188:8081/nexus/content/repositories/snapshots/</url>
-	   </snapshotRepository>
 	   <repository>
 	      <id>releases</id>
-	      <url>http://13.76.243.188:8081/nexus/content/repositories/releases/</url>
+	      <url>http://13.76.243.188:8081/nexus/content/repositories/releases</url>
 	   </repository>
 	</distributionManagement>
 
